# helios_controllers

actuators_controller_pkg/: CMakeLists.txt  package.xml
chassis_controller/: CMakeLists.txt  chassis_controller_plugin.xml  package.xml
chassis_controller/include/chassis_controller/: ChassisController.hpp  visibility_control.h
chassis_controller/include/chassis_controller/chassis/: BaseChassisSolver.hpp  OmnidirectionalSolver.hpp
chassis_controller/src/: ChassisController.cpp  chassis_controller_parameters.yaml
chassis_controller/src/chassis/: OmnidirectionalSolver.cpp
gimbal_controller/: CMakeLists.txt  gimbal_controller_plugin.xml  package.xml
gimbal_controller/include/gimbal_controller/: Gimbal.hpp  GimbalController.hpp  visibility_control.h
gimbal_controller/include/gimbal_controller/gimbal/: BaseGimbal.hpp  SingleGimbal.hpp
gimbal_controller/src/: Gimbal.cpp  GimbalController.cpp  gimbal_controller_parameters.yaml
gimbal_controller/src/gimbal/: SingleGimbal.cpp
gm6020_controller_pkg/: CMakeLists.txt  gm6020_controller_plugin.xml  package.xml
gm6020_controller_pkg/include/gm6020_controller_pkg/: GM6020Controller.hpp  SpeedLimiter.hpp  visibility_control.h
gm6020_controller_pkg/src/: GM6020Controller.cpp  SpeedLimiter.cpp  gm6020_controller_parameters.yaml
helios_controllers/: CMakeLists.txt  package.xml
imu_controller/: CMakeLists.txt  imu_controller_plugin.xml  package.xml
imu_controller/include/imu_controller/: IMUController.hpp  visibility_control.h
imu_controller/src/: IMUController.cpp  imu_controller_parameters.yaml
omnidirectional_controller/: CMakeLists.txt  omnidirectional_controller_plugin.xml  package.xml
omnidirectional_controller/include/omnidirectional_controller/: OmnidirectionalController.hpp  visibility_control.h
omnidirectional_controller/src/: OmnidirectionalController.cpp  omnidirectional_controller_parameters.yaml
shooter_controller/: CMakeLists.txt  omnidirectional_controller_plugin.xml  package.xml
shooter_controller/include/shooter_controller/: Shooter.hpp  ShooterController.hpp  visibility_control.h
shooter_controller/include/shooter_controller/shooter/: AbreastDoubleShooter.hpp  BaseShooter.hpp  SingleShooter.hpp
shooter_controller/src/: Shooter.cpp  ShooterController.cpp  shooter_controller_parameters.yaml
shooter_controller/src/shooter/: AbreastDoubleShooter.cpp  SingleShooter.cpp
